Bug 1771932 - Use more initializer lists in glsl.h. r=gfx-reviewers,gw a=pascalc

Avoid assigning to fields in the constructor body when it is constexpr.

Differential Revision: https://phabricator.services.mozilla.com/D148093